# lnkd-report

./: .gitignore  main.py  posts.csv  pyproject.toml  test_yaml.yml
output/: linkedin_report_2025-06-15.html  linkedin_report_2025-06-15.qmd
resources/: posts_2025-06-15.csv  posts_2025-06-16.csv  posts_2025-06-17.csv  template.qmd.j2  test_yaml.yml
src/: __init__.py  __main__.py  models.py  pw_implimentation.py  render.py  yaml_parse.py
