[project]
name = "lnkd-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "polars>=1.30.0",
    "pydantic>=2.11.7",
    "pytest-playwright>=0.7.0",
    "ruamel-yaml>=0.18.14",
]
